# deepshrink

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  format.rs  main.rs  update.rs
crates/cli/tests/: audio_target.rs  batch.rs  output_dir.rs  video_target.rs  vmaf.rs
crates/core/: Cargo.toml
crates/core/src/: budget.rs  detect.rs  lib.rs  options.rs  size.rs
crates/core/src/engine/: media.rs  mod.rs
crates/ffmpeg/: Cargo.toml
crates/ffmpeg/src/: caps.rs  lib.rs  probe.rs  progress.rs  run.rs  vmaf.rs
