[workspace]
resolver = "2"
members = ["crates/cli", "crates/core", "crates/ffmpeg"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/deeplabua/deepshrink"
homepage = "https://deepshrink.tools"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
owo-colors = { version = "4", features = ["supports-colors"] }

# Internal workspace crates (version enables publishing to crates.io).
deepshrink-core = { path = "crates/core", version = "0.2.0" }
deepshrink-ffmpeg = { path = "crates/ffmpeg", version = "0.2.0" }

[profile.release]
lto = "thin"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "deeplabua/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# ffmpeg is a runtime dependency; have the Homebrew formula pull it in.
# `stage = ["run"]` is what emits `depends_on "ffmpeg"` in the formula — the
# default stage is build-only, which would NOT install ffmpeg for users.
[workspace.metadata.dist.dependencies.homebrew]
ffmpeg = { version = "*", stage = ["build", "run"] }
