[package]
name = "deepshrink"
description = "Shrink media to a target size with one command. Local, private, no watermarks."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["ffmpeg", "video", "compression", "cli", "media"]
categories = ["command-line-utilities", "multimedia::video"]

[[bin]]
name = "deepshrink"
path = "src/main.rs"

[dependencies]
deepshrink-core.workspace = true
deepshrink-ffmpeg.workspace = true
anyhow.workspace = true
clap.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
serde_json.workspace = true
