[package]
name = "deepshrink-ffmpeg"
description = "Locate ffmpeg/ffprobe binaries and parse their output for DeepShrink."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
